--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -3,7 +3,7 @@ $color-primary-light: #f1c652;
 $color-danger: #e03308;
 
 $color-white: #fcf8f4;
-$color-dark: #403d39;
+$color-dark: #2b2825;
 
 $color-secondary: $color-dark;
 
