--- a/src/components/building-blocks/message-overlay.scss
+++ b/src/components/building-blocks/message-overlay.scss
@@ -3,11 +3,13 @@
 .message-overlay {
     width: 100%;
     height: 100%;
+    flex: 1 0 auto;
+    padding: 1rem 0;
 
     display: flex;
     flex-direction: column;
     background-color: $color-white;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 
     text-align: center;
@@ -25,5 +27,11 @@
 
     .action {
         padding-top: 1rem;
+        display: flex;
+        flex-direction: column;
+
+        > * + * {
+            margin-top: 1rem;
+        }
     }
 }
