--- a/src/components/app-parts/app-footer.scss
+++ b/src/components/app-parts/app-footer.scss
@@ -7,5 +7,18 @@
   .app-footer-content {
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: 40rem) {
+      flex-direction: column;
+      align-items: center;
+
+      > * {
+        text-align: center;
+
+        + * {
+          padding-top: 0.5rem;
+        }
+      }
+    }
   }
 }
