--- a/src/components/building-blocks/fetched-content.scss
+++ b/src/components/building-blocks/fetched-content.scss
@@ -1,7 +1,7 @@
 @import '../../style/mixins';
 
 .fetched-content {
-  position: relative;
+  // position: relative;
   width: 100%;
 
   @include body-container(auto);
@@ -9,7 +9,7 @@
   .update {
     position: absolute;
     right: 0;
-    top: -1.5rem;
+    top: 0;
     height: 1.5rem;
     line-height: 1.5rem;
   }
