improved event detail screen + fixes time tracking

--- a/src/components/views/event-detail/event-detail.scss
+++ b/src/components/views/event-detail/event-detail.scss
@@ -2,6 +2,11 @@
 
 .event-detail {
   @include body-container(auto);
+
+  .event-detail-metainfo {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .event-delete-zone {
