improved form and form fields + other small tweaks

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -32,4 +32,7 @@ $content-max-width: 60rem;
 
 $overlay-image-size: 5rem;
 
-$horizontal-rule-border: 2px solid rgba($color-secondary, 0.1)
+$horizontal-rule-border: 2px solid rgba($color-secondary, 0.1);
+
+$input-padding: 1rem;
+$input-border-width: 2px;
