--- a/src/components/building-blocks/markdown-preview.scss
+++ b/src/components/building-blocks/markdown-preview.scss
@@ -6,4 +6,6 @@
   margin: 1rem 0;
   border-left: 0.25rem solid $color-primary-light;
   background-color: rgba($color-primary-light, 0.1);
+
+  overflow: auto;
 }
