--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -32,7 +32,8 @@ $content-max-width: 60rem;
 
 $overlay-image-size: 5rem;
 
-$horizontal-rule-border: 2px solid rgba($color-secondary, 0.1);
+$horizontal-rule-color: rgba($color-secondary, 0.1);
+$horizontal-rule-border: 2px solid $horizontal-rule-color;
 
 $input-padding: 1rem;
 $input-border-width: 2px;
