--- a/src/components/building-blocks/page/page-footer.scss
+++ b/src/components/building-blocks/page/page-footer.scss
@@ -1,8 +1,8 @@
-@import "../../style/variables";
+@import "../../../style/variables";
 
 .page-footer {
-  width: 100%;
-  margin-top: 1rem;
+  width: calc(100% - 2rem);
+  margin: 1rem 1rem 0 1rem;
   padding: 1rem 0;
   border-top: $horizontal-rule-border;
 
