--- a/src/components/building-blocks/message-overlay.scss
+++ b/src/components/building-blocks/message-overlay.scss
@@ -1,37 +1,37 @@
-@import '../../style/variables';
+@import "../../style/variables";
 
 .message-overlay {
-    width: 100%;
-    height: 100%;
-    flex: 1 0 auto;
-    padding: 1rem 0;
+  width: 100%;
+  height: 100%;
+  flex: 1 0 auto;
+  padding: 1rem 0;
 
+  display: flex;
+  flex-direction: column;
+  background-color: $color-white;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+
+  .emoji {
+    font-size: $overlay-image-size;
+  }
+
+  .message {
+    font-weight: $font-weight-medium;
+    padding-top: 1rem;
+    font-size: 2rem;
+    opacity: 0.75;
+  }
+
+  .action {
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
-    background-color: $color-white;
-    justify-content: center;
-    align-items: center;
 
-    text-align: center;
-
-    .emoji {
-        font-size: $overlay-image-size;
+    > * + * {
+      margin-top: 1rem;
     }
-
-    .message {
-        font-weight: $font-weight-medium;
-        padding-top: 1rem;
-        font-size: 2rem;
-        opacity: 0.75;
-    }
-
-    .action {
-        padding-top: 1rem;
-        display: flex;
-        flex-direction: column;
-
-        > * + * {
-            margin-top: 1rem;
-        }
-    }
+  }
 }
