--- a/src/components/app-parts/app-error-boundary.scss
+++ b/src/components/app-parts/app-error-boundary.scss
@@ -1,23 +1,22 @@
-@import '../../style/variables';
+@import "../../style/variables";
 
 .app-error-boundary {
-    width: 100vw;
-    min-height: 100vh;
+  width: 100vw;
+  min-height: 100vh;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    background-color: $color-white;
+  background-color: $color-white;
 
-    .app-icon {
-        width: $overlay-image-size;
-        flex: 0 0 $overlay-image-size;
-    }
+  .app-icon {
+    width: $overlay-image-size;
+    flex: 0 0 $overlay-image-size;
+  }
 
-    .emoji {
-        font-size: $overlay-image-size * 0.8;
-        flex: 0 0 auto;
-    }
-
+  .emoji {
+    font-size: $overlay-image-size * 0.8;
+    flex: 0 0 auto;
+  }
 }
