--- a/src/components/app-parts/app-suspense.scss
+++ b/src/components/app-parts/app-suspense.scss
@@ -1,16 +1,16 @@
-@import '../../style/variables';
+@import "../../style/variables";
 
 .app-suspense {
-    width: 100vw;
-    height: 100vh;
-    background-color: $color-white;
+  width: 100vw;
+  height: 100vh;
+  background-color: $color-white;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    img {
-        width: 6rem;
-        height: 6rem;
-    }
+  img {
+    width: 6rem;
+    height: 6rem;
+  }
 }
