--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -1,10 +1,10 @@
 @import "./variables";
 
-@mixin focus($type: 'white') {
+@mixin focus($type: "white") {
   outline: none;
 
   $inner-shadow-color: $color-white;
-  @if ($type == 'dark') {
+  @if ($type == "dark") {
     $inner-shadow-color: $color-dark;
   }
 
