--- a/src/components/app-parts/app-footer.scss
+++ b/src/components/app-parts/app-footer.scss
@@ -1,4 +1,5 @@
 @import "../../style/variables";
+@import "../../style/mixins";
 
 .app-footer {
   background-color: $color-primary-light;
@@ -8,7 +9,38 @@
     display: flex;
     justify-content: space-between;
 
-    @media screen and (max-width: 40rem) {
+    a {
+      color: $color-text;
+      text-decoration: none;
+
+      position: relative;
+      border-radius: 0.25rem;
+
+      &:focus {
+        @include focus('custom', $color-primary-light);
+      }
+
+      &:after {
+        content: "";
+        border-bottom: 1px dashed rgba($color-text, 0.75);
+        display: block;
+        height: 0;
+        width: 100%;
+        position: absolute;
+        bottom: 0.05rem;
+        left: 0;
+        transition: 0.25s border;
+      }
+
+      &:hover {
+
+        &:after {
+          border-bottom-style: solid;
+        }
+      }
+    }
+
+    @media screen and (max-width: 50rem) {
       flex-direction: column;
       align-items: center;
 
