--- a/src/components/building-blocks/input.scss
+++ b/src/components/building-blocks/input.scss
@@ -1,11 +1,14 @@
 @import "../../style/variables";
 @import "../../style/mixins";
 
+$input-border: $input-border-width solid rgba($color-dark, 0.5);
+
 .input {
   > input,
   > select,
   > textarea {
-    border: $input-border-width solid rgba($color-dark, 0.5);
+    border: $input-border;
+    background-color: $color-white;
     padding: 0.5rem $input-padding;
     border-radius: 1rem;
     height: 3rem;
@@ -29,7 +32,7 @@
 
   > textarea {
     border-bottom-right-radius: 0.25rem;
-    min-height: 3rem;
+    min-height: 10rem;
   }
 
   &.invalid {
@@ -37,6 +40,10 @@
     > select,
     > textarea {
       border-color: $color-danger;
+
+      &:before {
+        border-color: $color-danger;
+      }
     }
   }
 
