--- a/src/components/building-blocks/page/page-timeline.scss
+++ b/src/components/building-blocks/page/page-timeline.scss
@@ -1,13 +1,14 @@
 @import "../../../style/variables";
 @import "../../../style/mixins";
 
-$timeline-background-color: $color-white;
+$timeline-background-color: lighten($color-dark, 70%);
 
 .page-timeline {
   width: 100%;
   position: relative;
   background-color: $timeline-background-color;
   padding-bottom: 1rem;
+  border-bottom: 0.5rem solid $color-dark;
 
   &:before {
     content: "";
@@ -87,7 +88,7 @@ $timeline-background-color: $color-white;
         }
 
         &:focus {
-          @include focus;
+          @include focus('custom', $timeline-background-color);
         }
       }
     }
@@ -126,7 +127,7 @@ $timeline-background-color: $color-white;
           margin-top: 0.5rem;
         }
 
-        a {
+        a, span {
           margin-bottom: 0;
           margin-left: 0.5rem;
           flex-grow: 1;
