--- a/src/components/views/event-detail/event-timestamp.scss
+++ b/src/components/views/event-detail/event-timestamp.scss
@@ -1,14 +1,35 @@
 @import "../../../style/variables";
 
 .event-timestamp {
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
 
-  .event-date {
-    font-weight: $font-weight-medium;
+  .event-timestamp-days-connector {
+    margin: 0 0.5rem;
   }
 
-  .event-time {
-    margin-left: 0.25rem;
-    font-size: 0.75rem;
+  .event-date-time {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+
+    .event-date {
+      font-weight: $font-weight-medium;
+      margin-right: 0.25rem;
+    }
+
+    .event-time {
+      font-size: 0.75rem;
+    }
+  }
+
+  @media screen and (max-width: 24rem) {
+    flex-direction: column;
+    align-items: flex-start;
+
+    .event-timestamp-days-connector {
+      margin-left: 2rem;
+    }
   }
 }
