refactoring of source folder structure

--- a/src/components/building-blocks/form/form-field.scss
+++ b/src/components/building-blocks/form/form-field.scss
@@ -1,5 +1,4 @@
-@import "../../style/variables";
-@import "../../style/mixins";
+@import "../../../style/variables";
 
 .form-field {
   margin-bottom: 1.5rem;
