--- a/src/components/building-blocks/containers/app-content.scss
+++ b/src/components/building-blocks/containers/app-content.scss
@@ -1,5 +1,5 @@
-@import "../../style/variables";
-@import "../../style/mixins";
+@import "../../../style/variables";
+@import "../../../style/mixins";
 
 .app-content {
   max-width: $content-max-width;
