--- a/src/components/building-blocks/containers/fetched-content.scss
+++ b/src/components/building-blocks/containers/fetched-content.scss
@@ -1,4 +1,5 @@
-@import "../../style/mixins";
+@import "../../../style/mixins";
+@import "../../../style/mixins";
 
 .fetched-content {
   // position: relative;
