--- a/src/components/building-blocks/form/input.scss
+++ b/src/components/building-blocks/form/input.scss
@@ -1,5 +1,5 @@
-@import "../../style/variables";
-@import "../../style/mixins";
+@import "../../../style/variables";
+@import "../../../style/mixins";
 
 $input-border: $input-border-width solid rgba($color-dark, 0.5);
 
