updated time tracking, past events sort order reversed, improved fetched-content update message style

--- a/src/components/building-blocks/page/page.scss
+++ b/src/components/building-blocks/page/page.scss
@@ -3,13 +3,12 @@
 .page {
   @include body-container;
 
-  position: relative;
-
   .page-body {
     @include body-container(auto);
 
-    .page-content {
+    .page-body-content {
       @include body-container(auto);
+      position: relative;
     }
   }
 }
