--- a/src/components/building-blocks/containers/fetched-content.scss
+++ b/src/components/building-blocks/containers/fetched-content.scss
@@ -9,9 +9,11 @@
 
   .update {
     position: absolute;
-    right: 0;
-    top: 0;
+    left: 0;
+    top: -1.5rem;
     height: 1.5rem;
     line-height: 1.5rem;
+    opacity: 0.75;
+    font-size: 75%;
   }
 }
