--- a/src/components/app-parts/app-footer.scss
+++ b/src/components/app-parts/app-footer.scss
@@ -15,6 +15,7 @@
 
       position: relative;
       border-radius: 0.25rem;
+      white-space: nowrap;
 
       &:focus {
         @include focus('custom', $color-primary-light);
